--- a/lib/phoenix_core_web/components/layouts/root.html.heex
+++ b/lib/phoenix_core_web/components/layouts/root.html.heex
@@ -8,8 +8,26 @@
       <%= assigns[:page_title] || "PhoenixCore" %>
     </.live_title>
     <link phx-track-static rel="stylesheet" href={~p"/assets/app.css"} />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&display=swap" rel="stylesheet" />
+    <link phx-track-static rel="stylesheet" href={~p"/assets/css/fontawesome-all.css"} rel="stylesheet" />
+    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" />
+    <link phx-track-static rel="stylesheet" href={~p"/assets/css/swiper.css"} rel="stylesheet" />
+    <link phx-track-static rel="stylesheet" href={~p"/assets/css/magnific-popup.css"} rel="stylesheet" />
+    <link phx-track-static rel="stylesheet" href={~p"/assets/css/styles.css"} rel="stylesheet" />
+
+    <!-- Favicon  -->
+    <link rel="icon" href="images/favicon.png" />
     <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}>
     </script>
+
+
+     <!-- Scripts -->
+        <script defer phx-track-static type="text/javascript" src={~p"/assets/js/jquery.min.js"}></script> <!-- jQuery for JavaScript plugins -->
+        <script defer phx-track-static type="text/javascript" src={~p"/assets/js/jquery.easing.min.js"}></script> <!-- jQuery Easing for smooth scrolling between anchors -->
+        <script defer phx-track-static type="text/javascript" src={~p"/assets/js/swiper.min.js"}></script> <!-- Swiper for image and text sliders -->
+        <script defer phx-track-static type="text/javascript" src={~p"/assets/js/jquery.magnific-popup.js"}></script> <!-- Magnific Popup for lightboxes -->
+        <script defer phx-track-static type="text/javascript" src={~p"/assets/js/scripts.js"}></script> <!-- Custom scripts -->
   </head>
   <body class="bg-white antialiased">
     <%= @inner_content %>
