--- a/lib/phoenix_core_web/controllers/page_html/home.html.heex
+++ b/lib/phoenix_core_web/controllers/page_html/home.html.heex
@@ -22,7 +22,7 @@
                             <a class="nav-link page-scroll active" href="#header">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li>
-                            <a class="nav-link page-scroll" href="#features">Features</a>
+                            <a class="nav-link page-scroll" href={~p"/modules"} >Modules</a>
                         </li>
                         <li>
                             <a class="nav-link page-scroll" href="#details">Details</a>
