--- a/lib/phoenix_core_web/controllers/page_html/home.html.heex
+++ b/lib/phoenix_core_web/controllers/page_html/home.html.heex
@@ -21,8 +21,14 @@
                         <li>
                             <a class="nav-link page-scroll active" href="#header">Home <span class="sr-only">(current)</span></a>
                         </li>
-                        <li>
-                            <a class="nav-link page-scroll" href={~p"/modules"} >Modules</a>
+                        <li class="dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Modules</a>
+                            <div class="dropdown-menu" aria-labelledby="dropdown01">
+                                <a class="dropdown-item page-scroll" href={~p"/modules"}>View Modules</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item page-scroll" href={~p"/tbl_modules"}>Manage Modules</a>
+                
+                            </div>
                         </li>
                         <li>
                             <a class="nav-link page-scroll" href="#details">Details</a>
