--- a/lib/phoenix_core_web/controllers/page_html/modules.html.heex
+++ b/lib/phoenix_core_web/controllers/page_html/modules.html.heex
@@ -292,6 +292,8 @@
     <div id="modules"
       class="container  mx-auto px-10 md:px-0 mt-20 grid grid-cols-1 gap-8 md:grid-cols-2 xl:grid-cols-3"
     >
+
+    <%= for module <- @module_items do %>
       <div class="rounded-xl bg-gray-800 flex flex-col p-8">
         <div
           class="w-16 h-16 inline-flex items-center justify-center rounded-full bg-green-100 text-green-500 mb-5 flex-shrink-0 p-4"
@@ -312,80 +314,19 @@
           </svg>
         </div>
         <div class="flex-grow text-white">
-          <h2 class="text-xl title-font font-medium mb-3 text-white text-1xl font-bold">Landing Pages</h2>
+          <h2 class="text-xl title-font font-medium mb-3 text-white text-1xl font-bold"><%= module.name %></h2>
           <p class="leading-relaxed text-sm text-justify">
-            Donner du goût ? de la couleur aux applications, je le fais afin de
-            rendre vos sites attrayants ?. Avant de devenir webdesigner, depuis
-            tout petit j'étais déjà familier à la couleur et du dessin.
+          <%= module.description %>
           </p>
+         <a href={module.url}>
           <button class="btn overflow-hidden relative w-64 bg-emerald-500 text-white py-2 px-2 mt-2 rounded-xl  -- before:block before:absolute before:h-full before:w-1/2 before:rounded-full before:bg-orange-400 before:top-0 before:left-1/4 before:transition-transform before:opacity-0 before:hover:opacity-100 hover:text-orange-200 hover:before:animate-ping transition-all duration-300">
           <span class="relative">View</span>
-        </button>
+          </button>
+         </a>
         </div>
       </div>
-      <div class="rounded-xl bg-gray-800 flex flex-col p-8">
-        <div
-          class="w-16 h-16 inline-flex items-center justify-center rounded-full bg-green-100 text-green-500 mb-5 flex-shrink-0 p-4"
-        >
-          <svg
-            class="w-24 h-24"
-            fill="none"
-            stroke="currentColor"
-            viewBox="0 0 24 24"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="M7 21a4 4 0 01-4-4V5a2 2 0 012-2h4a2 2 0 012 2v12a4 4 0 01-4 4zm0 0h12a2 2 0 002-2v-4a2 2 0 00-2-2h-2.343M11 7.343l1.657-1.657a2 2 0 012.828 0l2.829 2.829a2 2 0 010 2.828l-8.486 8.485M7 17h.01"
-            ></path>
-          </svg>
-        </div>
-        <div class="flex-grow text-white">
-          <h2 class="text-xl title-font font-medium mb-3  text-white text-1xl font-bold">Forms</h2>
-          <p class="leading-relaxed text-sm text-justify">
-            Donner du goût ? de la couleur aux applications, je le fais afin de
-            rendre vos sites attrayants ?. Avant de devenir webdesigner, depuis
-            tout petit j'étais déjà familier à la couleur et du dessin.
-          </p>
-
-           <button class="btn overflow-hidden relative w-64 bg-emerald-500 text-white py-2 px-2 mt-2 rounded-xl  -- before:block before:absolute before:h-full before:w-1/2 before:rounded-full before:bg-orange-400 before:top-0 before:left-1/4 before:transition-transform before:opacity-0 before:hover:opacity-100 hover:text-orange-200 hover:before:animate-ping transition-all duration-300">
-          <span class="relative">View</span>
-        </button>
-        </div>
-      </div>
-      <div class="rounded-xl bg-gray-800 flex flex-col p-8">
-        <div
-          class="w-16 h-16 inline-flex items-center justify-center rounded-full bg-green-100 text-green-500 mb-5 flex-shrink-0 p-4"
-        >
-          <svg
-            class="w-24 h-24"
-            fill="none"
-            stroke="currentColor"
-            viewBox="0 0 24 24"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="M7 21a4 4 0 01-4-4V5a2 2 0 012-2h4a2 2 0 012 2v12a4 4 0 01-4 4zm0 0h12a2 2 0 002-2v-4a2 2 0 00-2-2h-2.343M11 7.343l1.657-1.657a2 2 0 012.828 0l2.829 2.829a2 2 0 010 2.828l-8.486 8.485M7 17h.01"
-            ></path>
-          </svg>
-        </div>
-        <div class="flex-grow text-white">
-          <h2 class="text-xl title-font font-medium mb-3 text-white text-1xl font-bold">Naviagation Menus</h2>
-          <p class="leading-relaxed text-sm text-justify">
-            Donner du goût ? de la couleur aux applications, je le fais afin de
-            rendre vos sites attrayants ?. Avant de devenir webdesigner, depuis
-            tout petit j'étais déjà familier à la couleur et du dessin.
-          </p>
-           <button class="btn overflow-hidden relative w-64 bg-emerald-500 text-white py-2 px-2 mt-2 rounded-xl  -- before:block before:absolute before:h-full before:w-1/2 before:rounded-full before:bg-orange-400 before:top-0 before:left-1/4 before:transition-transform before:opacity-0 before:hover:opacity-100 hover:text-orange-200 hover:before:animate-ping transition-all duration-300">
-          <span class="relative">View</span>
-        </button>
-        </div>
-      </div>
+     <% end %>
+    
     </div>
     <%!-- <div
       class="container mx-auto mt-20 grid grid-cols-2 gap-8 md:grid-cols-3 xl:grid-cols-4"
